# Labs-1-course

./: README.md
labs-krylova-main/hw-01_bmp/: CMakeLists.txt
labs-krylova-main/hw-01_bmp/include/: bmp.h
labs-krylova-main/hw-01_bmp/src/: bmp.c  main.c
labs-krylova-main/hw-02_huffman/: CMakeLists.txt
labs-krylova-main/hw-02_huffman/include/: HuffmanArchiver.h  HuffmanTree.h  HuffmanUnarchiver.h  util.h
labs-krylova-main/hw-02_huffman/src/: HuffmanArchiver.cpp  HuffmanTree.cpp  HuffmanUnarchiver.cpp  main.cpp  util.cpp
labs-krylova-main/hw-02_huffman/test/: huffman_archiver_test.cpp  huffman_unarchiver_test.cpp  tree_Test.cpp  util_test.cpp
labs-krylova-main/lab-01_makefile/: Makefile  SOLUTION.md
labs-krylova-main/lab-01_makefile/include/: algorithm.h  io.h  util.h
labs-krylova-main/lab-01_makefile/src/: algorithm.c  io.c  main.c  util.c
labs-krylova-main/lab-02_cstrings/: CMakeLists.txt
labs-krylova-main/lab-02_cstrings/include/: str.h  test_str.h
labs-krylova-main/lab-02_cstrings/src/: str.c  test.c  test_str.c
labs-krylova-main/lab-03_mergesort/: CMakeLists.txt
labs-krylova-main/lab-03_mergesort/include/: mergesort.h
labs-krylova-main/lab-03_mergesort/src/: main.c  mergesort.c
labs-krylova-main/lab-04_intrusive-list/: CMakeLists.txt
labs-krylova-main/lab-04_intrusive-list/include/: clist.h
labs-krylova-main/lab-04_intrusive-list/src/: clist.c  main.c
labs-krylova-main/lab-05_c-io/: CMakeLists.txt
labs-krylova-main/lab-05_c-io/include/: clist.h  point_list.h
labs-krylova-main/lab-05_c-io/src/: clist.c  main.c  point_list.c
labs-krylova-main/lab-08_shared-ptr/: Makefile
labs-krylova-main/lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
labs-krylova-main/lab-08_shared-ptr/src/: matrix.cpp  shared_ptr.cpp
labs-krylova-main/lab-09_figures/: CMakeLists.txt
labs-krylova-main/lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
labs-krylova-main/lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp
labs-krylova-main/lab-10_cppio/: CMakeLists.txt
labs-krylova-main/lab-10_cppio/include/: bin_manip.h  employees.h
labs-krylova-main/lab-10_cppio/src/: bin_manip.cpp  employees.cpp  main.cpp
labs-krylova-main/lab-11_vector/: CMakeLists.txt
labs-krylova-main/lab-11_vector/include/: my_vector.hpp  my_vector_impl.hpp
labs-krylova-main/lab-11_vector/src/: main.cpp
labs-krylova-main/lab-12_exceptions/: CMakeLists.txt
labs-krylova-main/lab-12_exceptions/include/: matrix.h
labs-krylova-main/lab-12_exceptions/src/: main.cpp  matrix.cpp
labs-krylova-main/lab-13_array/: CMakeLists.txt
labs-krylova-main/lab-13_array/include/: my_array.h
labs-krylova-main/lab-13_array/src/: main.cpp
